--- a/public/app.css
+++ b/public/app.css
@@ -2,6 +2,8 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: sans-serif;
+  font-size: 16px;
 }
 
 .app {
@@ -15,7 +17,10 @@ html, body {
   flex-grow: 0;
   flex-shrink: 0;
   padding: 10px;
-  border-bottom: 1px solid #666;
+
+  background: #C08060;
+  color: white;
+  font-weight: bold;
 }
 
 .app__content {
@@ -25,22 +30,9 @@ html, body {
 }
 
 .file-input {
-  border: 1px dotted #666;
+  margin: 0;
   padding: 10px;
-  margin: 10px;
-}
-
-.tree {
-  overflow: auto;
-  max-height: 100%;
-}
-
-.tree__node {
-  padding-left: 20px;
-  cursor: pointer;
-}
-.tree__row:hover {
-  background: #eee;
+  border: 1px dotted #ccc;
 }
 
 .splitter {
