--- a/src/components/search/style.css
+++ b/src/components/search/style.css
@@ -6,17 +6,32 @@
 }
 
 .label {
-  margin: 0 10px 0 0;
 }
 
 .entry {
   flex-grow: 1;
   flex-shrink: 1;
 
+  margin: 0 10px;
   padding: 10px;
+  height: 20px;
 
   border: none;
   background: #B07050;
   color: white;
+}
+
+.reset {
+  -moz-box-sizing: content-box;
+
+  border: none;
+  margin: 0;
+  padding: 10px;
+  height: 20px;
+
+  color: white;
+  background: #B07050;
+  font-weight: bold;
+  font-size: 1em;
 }
 
