--- a/src/components/entry_view/style.css
+++ b/src/components/entry_view/style.css
@@ -15,4 +15,16 @@
   padding: 0.5em;
   margin: 0.5em 0 0;
   white-space: pre-wrap;
+  position: relative;
+}
+.copy {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  border: 1px solid #666;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  cursor: pointer;
 }
