--- a/src/components/search/style.css
+++ b/src/components/search/style.css
@@ -1,37 +1,42 @@
-.form {
+.container {
+  flex-grow: 4;
+  flex-shrink: 4;
+
   display: flex;
-  margin: 10px 0 0;
-  padding: 0;
   align-items: center;
+  background: #B07050;
 }
 
 .label {
+  padding-left: 10px;
 }
 
 .entry {
-  flex-grow: 1;
-  flex-shrink: 1;
+  flex-grow: 4;
+  flex-shrink: 4;
 
-  margin: 0 10px;
   padding: 10px;
+  width: 100%;
   height: 20px;
 
   border: none;
   background: #B07050;
   color: white;
+  outline: none;
 }
 
 .reset {
-  -moz-box-sizing: content-box;
-
   border: none;
   margin: 0;
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   height: 20px;
+  box-sizing: content-box;
 
   color: white;
   background: #B07050;
   font-weight: bold;
   font-size: 1em;
 }
-
+.reset:active {
+  background: #8d593f;
+}
