--- a/src/widgets/file_input/style.css
+++ b/src/widgets/file_input/style.css
@@ -1,8 +1,11 @@
 .block {
-  margin: 0;
+  margin: 10px;
   padding: 10px;
-  border: 1px dotted #ccc;
   position: relative;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: linear-gradient(#fff, #eee);
+  text-align: center;
 }
 
 .input {
