--- a/src/components/ask_password/style.css
+++ b/src/components/ask_password/style.css
@@ -23,6 +23,7 @@
 }
 .input {
   margin: 5px 0 0;
+  padding: 8px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -33,5 +34,10 @@
   justify-content: flex-end;
 }
 .buttons > * {
-  margin-left: 20px;
+  margin-left: 10px;
+  padding: 8px 16px;
+  background: #C08060;
+  border: #804020 1px solid;
+  border-radius: 6px;
+  color: #fff;
 }
