--- a/src/components/search/style.css
+++ b/src/components/search/style.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   background: #B07050;
+  border-radius: 6px;
 }
 
 .label {
@@ -15,7 +16,7 @@
   flex-grow: 4;
   flex-shrink: 4;
 
-  padding: 10px;
+  padding: 10px 0 10px 10px;
   width: 100%;
   height: 20px;
 
@@ -27,8 +28,9 @@
 
 .reset {
   border: none;
+  border-radius: 6px;
   margin: 0;
-  padding: 10px 10px 10px 0;
+  padding: 10px;
   height: 20px;
   box-sizing: content-box;
 
