--- a/src/components/search/style.css
+++ b/src/components/search/style.css
@@ -4,7 +4,7 @@
 
   display: flex;
   align-items: center;
-  background: #B07050;
+  background: #b07050;
   border-radius: 6px;
 }
 
@@ -21,7 +21,7 @@
   height: 20px;
 
   border: none;
-  background: #B07050;
+  background: #b07050;
   color: white;
   outline: none;
 }
@@ -35,7 +35,7 @@
   box-sizing: content-box;
 
   color: white;
-  background: #B07050;
+  background: #b07050;
   font-weight: bold;
   font-size: 1em;
 }
