--- a/src/components/ask_password/style.css
+++ b/src/components/ask_password/style.css
@@ -1,5 +1,6 @@
-.container {
-  margin: 40px auto;
+.dialog {
+  padding: 0;
+  border: none;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
   background: #eee;
   max-width: 500px;
